Added strawberry and mpris slots

--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -37,6 +37,14 @@ plugs:
     target: $SNAP/kvantum
     default-provider: qt-style-kvantum
 
+slots:
+  strawberry:
+    interface: dbus
+    bus: session
+    name: org.strawberrymusicplayer.strawberry
+  mpris:
+    name: strawberry
+
 environment:
   QT_PLUGIN_PATH: $SNAP/kvantum/usr/lib/x86_64-linux-gnu/qt6/plugins${QT_PLUGIN_PATH:+:$QT_PLUGIN_PATH}
 
