--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -22,6 +22,8 @@ apps:
     common-id: org.strawberrymusicplayer.strawberry
     environment:
       QT_QPA_PLATFORMTHEME: xdgdesktopportal
+      LD_LIBRARY_PATH: $SNAP/lxqt-support/usr/lib/$CRAFT_ARCH_TRIPLET_BUILD_FOR:$LD_LIBRARY_PATH
+      QT_PLUGIN_PATH: $SNAP/lxqt-support/usr/lib/$CRAFT_ARCH_TRIPLET_BUILD_FOR/qt6/plugins:$QT_PLUGIN_PATH
     extensions: [kde-neon-6]
     plugs:
       - home
@@ -31,20 +33,17 @@ apps:
       - mpris
 
 plugs:
-  kvantum:
-    content: kvantum
+  lxqt-support:
+    content: lxqt-support
     interface: content
-    target: $SNAP/kvantum
-    default-provider: qt-style-kvantum
-
-environment:
-  QT_PLUGIN_PATH: $SNAP/kvantum/usr/lib/$CRAFT_ARCH_TRIPLET_BUILD_FOR/qt6/plugins${QT_PLUGIN_PATH:+:$QT_PLUGIN_PATH}
+    target: $SNAP/lxqt-support
+    default-provider: lxqt-support
 
 layout:
   /usr/share/color-schemes:
-    symlink: $SNAP/kvantum/usr/share/color-schemes
+    symlink: $SNAP/lxqt-support/usr/share/color-schemes
   /usr/share/Kvantum:
-    symlink: $SNAP/kvantum/usr/share/Kvantum
+    symlink: $SNAP/lxqt-support/usr/share/Kvantum
 
 package-repositories:
   - type: apt
