--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -21,6 +21,7 @@ apps:
     desktop: usr/share/applications/org.strawberrymusicplayer.strawberry.desktop
     common-id: org.strawberrymusicplayer.strawberry
     environment:
+      QT_QPA_PLATFORMTHEME: xdgdesktopportal
       LD_LIBRARY_PATH: $SNAP/lxqt-support/usr/lib/$CRAFT_ARCH_TRIPLET_BUILD_FOR:$LD_LIBRARY_PATH
       QT_PLUGIN_PATH: $SNAP/lxqt-support/usr/lib/$CRAFT_ARCH_TRIPLET_BUILD_FOR/qt6/plugins:$QT_PLUGIN_PATH
     extensions: [kde-neon-6]
