--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -1,6 +1,6 @@
 name: strawberry-kyu
 base: core24
-version: '1.2.16'
+adopt-info: strawberry-app
 platforms:
   amd64:
     build-on: [amd64]
@@ -14,6 +14,7 @@ description: |
   Strawberry is free software released under GPL. It's written in C++ using the Qt framework and GStreamer. 
 grade: stable
 confinement: strict
+icon: strawberry.png
 
 apps:
   strawberry-kyu:
@@ -22,8 +23,8 @@ apps:
     common-id: org.strawberrymusicplayer.strawberry
     environment:
       QT_QPA_PLATFORMTHEME: xdgdesktopportal
-      LD_LIBRARY_PATH: $SNAP/lxqt-support/usr/lib/$CRAFT_ARCH_TRIPLET_BUILD_FOR:$LD_LIBRARY_PATH
-      QT_PLUGIN_PATH: $SNAP/lxqt-support/usr/lib/$CRAFT_ARCH_TRIPLET_BUILD_FOR/qt6/plugins:$QT_PLUGIN_PATH
+      LD_LIBRARY_PATH: $SNAP/lxqt-support-core24/usr/lib/$CRAFT_ARCH_TRIPLET_BUILD_FOR:$LD_LIBRARY_PATH
+      QT_PLUGIN_PATH: $SNAP/lxqt-support-core24/usr/lib/$CRAFT_ARCH_TRIPLET_BUILD_FOR/qt6/plugins:$QT_PLUGIN_PATH
     extensions: [kde-neon-6]
     plugs:
       - home
@@ -33,17 +34,17 @@ apps:
       - mpris
 
 plugs:
-  lxqt-support:
-    content: lxqt-support
+  lxqt-support-core24:
+    content: lxqt-support-core24
     interface: content
-    target: $SNAP/lxqt-support
-    default-provider: lxqt-support
+    target: $SNAP/lxqt-support-core24
+    default-provider: lxqt-support-core24
 
 layout:
   /usr/share/color-schemes:
-    symlink: $SNAP/lxqt-support/usr/share/color-schemes
+    symlink: $SNAP/lxqt-support-core24/usr/share/color-schemes
   /usr/share/Kvantum:
-    symlink: $SNAP/lxqt-support/usr/share/Kvantum
+    symlink: $SNAP/lxqt-support-core24/usr/share/Kvantum
 
 package-repositories:
   - type: apt
@@ -54,23 +55,21 @@ package-repositories:
     key-id: BE5ED0F9261CAAD9A1E5B1A4CD6289E999EA819D
 
 parts:
-  strawberry:
+  strawberry-app:
     plugin: nil
     stage-packages:
       - strawberry
     override-stage: |
       craftctl default
-      sed -i 's|Name=Strawberry|Name=Strawberry [NyKyu]|' $CRAFT_STAGE/usr/share/applications/org.strawberrymusicplayer.strawberry.desktop
-      sed -i 's|Exec=strawberry %U|Exec=${SNAP}/usr/bin/strawberry %U|' $CRAFT_STAGE/usr/share/applications/org.strawberrymusicplayer.strawberry.desktop
-      sed -i 's|TryExec=strawberry|TryExec=${SNAP}/usr/bin/strawberry|' $CRAFT_STAGE/usr/share/applications/org.strawberrymusicplayer.strawberry.desktop
-      sed -i 's|Icon=strawberry|Icon=${SNAP}/usr/share/icons/hicolor/128x128/apps/strawberry.png|' $CRAFT_STAGE/usr/share/applications/org.strawberrymusicplayer.strawberry.desktop
+      sed -i 's|Name=Strawberry|Name=Strawberry [Kyu]|' $CRAFT_STAGE/usr/share/applications/org.strawberrymusicplayer.strawberry.desktop
+      craftctl set version=$(dpkg-parsechangelog -l $CRAFT_PART_INSTALL/usr/share/doc/strawberry/changelog.*.gz -S Version | sed -e s/1://g)
     prime:
       - usr/bin/strawberry
       - usr/share/applications/org.strawberrymusicplayer.strawberry.desktop
       - usr/share/icons/hicolor/*/apps/strawberry.png
 
   dependencies:
-    after: [strawberry]
+    after: [strawberry-app]
     plugin: nil
     stage-packages:
       - libcdio19t64
